--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,9 @@ buildscript {
         version_core = "1.0.1"
         version_coroutine = "1.1.0"
         version_navigation = '1.0.0'
-        version_constraint_layout = "2.0.0-alpha3"
+        version_constraint_layout = "2.0.0-beta4"
         version_gradle = '3.6.1'
-        version_kotlin = "1.3.21"
+        version_kotlin = "1.3.61"
         version_lifecycle_extensions = "2.2.0"
         version_room = "2.2.4"
         version_appcompat = "1.0.2"
